<resources>
    <string name="app_name">FoodSystem</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="university_food_app">University Food App</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_home_page">Welcome to Home Page</string>
    <string name="logout">LogOut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Menu">Menu</string>
    <string name="Order">Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_1">Menu</string>
    <string name="tab_2">Order</string>
</resources>