<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background"
    tools:context=".Registration">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/university_food_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/registeremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="164dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/SignInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/PhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="238dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number|phone"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/registerpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registeremail"
        android:layout_alignParentStart="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword|numberPassword"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp" />


</RelativeLayout>